Improve documentation and consistency of type parameter naming